sqlc renew
